ai bot service working with main.py

--- a/projects/chatgpt/chatgpt openai.ipynb
+++ b/projects/chatgpt/chatgpt openai.ipynb
@@ -120,7 +120,7 @@
    ],
    "source": [
     "stream_prompt(\"\"\"\n",
-    "What is a camel?\n",
+    "Who is user Jason McAffee?\n",
     "\"\"\")"
    ],
    "metadata": {
