--- a/projects/chatgpt/llm functions agent.ipynb
+++ b/projects/chatgpt/llm functions agent.ipynb
@@ -71,14 +71,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# How much did I spend in March and April of 2022?\n",
+    "# How many transactions were over 1000 in 2022?\n",
+    "# What are the descriptions and amounts for transactions that were over 1000 in 2022?\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "transaction_query called with query: \n",
-      "SELECT SUM(amount) FROM Transaction WHERE date >= '2022-03-01' AND date < '2022-05-01'\n",
+      "SELECT SUM(amount) FROM Transaction WHERE date >= date('2022-03-01') AND date <= date('2022-04-30')\n",
       "query result:\n",
       " sum\r\n",
       "-1987.3300000000022\r\n",
@@ -88,8 +101,6 @@
     }
    ],
    "source": [
-    "%autoreload\n",
-    "\n",
     "result = inference(\"\"\"\n",
     "How much did I spend in March and April of 2022?\n",
     "\"\"\".strip())\n",
@@ -102,83 +113,18 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-09T23:37:33.763236Z",
-     "start_time": "2023-12-09T23:37:30.872953Z"
+     "end_time": "2023-12-09T23:57:42.301186Z",
+     "start_time": "2023-12-09T23:57:39.249672Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "init\n",
-      "\n",
-      "---- found function with tool_data: find_financial_transactions\n",
-      "---- found function with tool_data: get_user_details\n",
-      "------- inference ------------\n",
-      "sending messages: [{'role': 'system', 'content': 'You are a helpful assistant that answers questions accurately, without making up facts.'}, {'role': 'user', 'content': 'How much did I spend between 3/10/23 and and 3/20/23?'}]\n",
-      "does_function exist: find_financial_transactions is True\n",
-      "calling function: find_financial_transactions\n",
-      "calling function find_financial_transactions\n",
-      "get_transactions_for_date_range function called with arguments {'start_date_iso': '2023-03-10', 'end_date_iso': '2023-03-20'}\n",
-      "\n",
-      "\n",
-      "\n",
-      "function result: [{\"amount\": 123.05, \"description\": \"\", \"date\": \"2023-03-15T10:12:45.12\", \"category\": \"Groceries\", \"merchant_name\": \"Walmart\"}, {\"amount\": 53.12, \"description\": \"\", \"date\": \"2023-03-14T11:34:33.16\", \"category\": \"Gas\", \"merchant_name\": \"Chevron\"}, {\"amount\": 433.0, \"description\": \"\", \"date\": \"2023-03-13T11:22:45.07\", \"category\": \"Shopping\", \"merchant_name\": \"Amazon\"}]\n",
-      "------- inference ------------\n",
-      "sending messages: [{'role': 'system', 'content': 'You are a helpful assistant that answers questions accurately, without making up facts.'}, {'role': 'user', 'content': 'How much did I spend between 3/10/23 and and 3/20/23?'}, {'role': 'assistant', 'tool_calls': [<OpenAIObject id=call_C1v1VDCjqGrw3qoen6ZHNyIf at 0x7fc3c05d9900> JSON: {\n",
-      "  \"id\": \"call_C1v1VDCjqGrw3qoen6ZHNyIf\",\n",
-      "  \"type\": \"function\",\n",
-      "  \"function\": {\n",
-      "    \"name\": \"find_financial_transactions\",\n",
-      "    \"arguments\": \"{\\n  \\\"start_date_iso\\\": \\\"2023-03-10\\\",\\n  \\\"end_date_iso\\\": \\\"2023-03-20\\\"\\n}\"\n",
-      "  }\n",
-      "}]}, {'role': 'tool', 'content': '[{\"amount\": 123.05, \"description\": \"\", \"date\": \"2023-03-15T10:12:45.12\", \"category\": \"Groceries\", \"merchant_name\": \"Walmart\"}, {\"amount\": 53.12, \"description\": \"\", \"date\": \"2023-03-14T11:34:33.16\", \"category\": \"Gas\", \"merchant_name\": \"Chevron\"}, {\"amount\": 433.0, \"description\": \"\", \"date\": \"2023-03-13T11:22:45.07\", \"category\": \"Shopping\", \"merchant_name\": \"Amazon\"}]', 'tool_call_id': 'call_C1v1VDCjqGrw3qoen6ZHNyIf', 'name': 'find_financial_transactions'}]\n",
-      "chatgpt response: \n",
-      " Between 3/10/23 and 3/20/23, you spent a total of $609.17. Here are the transactions:\n",
-      "\n",
-      "1. Walmart - $123.05 (Groceries) on 3/15/23\n",
-      "2. Chevron - $53.12 (Gas) on 3/14/23\n",
-      "3. Amazon - $433.00 (Shopping) on 3/13/23\n",
-      "answer received in 9.309298992156982 seconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%autoreload\n",
-    "\n",
-    "llm_functions_agent = LLMFunctionsAgent(openai=openai)\n",
-    "\n",
-    "def inference(question):\n",
-    "    return llm_functions_agent.inference(question)\n",
-    "    \n",
-    "inference(\"\"\"\n",
-    "How much did I spend between 3/10/23 and and 3/20/23?\n",
-    "\"\"\".strip())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-03T04:24:07.892773Z",
-     "start_time": "2023-12-03T04:23:58.240919Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-03T04:16:16.208371Z",
-     "start_time": "2023-12-03T04:16:16.204680Z"
-    }
+    "collapsed": false
    }
   }
  ],
