--- a/projects/chatgpt/chatgpt openai.ipynb
+++ b/projects/chatgpt/chatgpt openai.ipynb
@@ -11,17 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "import openai\n",
     "from projects.chatgpt.agents.LLMFunctionsAgent import LLMFunctionsAgent\n",
@@ -43,14 +34,14 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-15T02:28:26.647046Z",
-     "start_time": "2023-12-15T02:28:26.593392Z"
+     "end_time": "2023-12-26T22:53:19.305980Z",
+     "start_time": "2023-12-26T22:53:18.886266Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import time\n",
@@ -98,29 +89,29 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-15T02:28:29.154949Z",
-     "start_time": "2023-12-15T02:28:29.101372Z"
+     "end_time": "2023-12-26T22:53:34.147506Z",
+     "start_time": "2023-12-26T22:53:34.137424Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "asking chatgpt: \n",
-      "What is a camel?\n",
-      "A camel is a large mammal that is native to the deserts of Asia and Africa. They are known for their distinctive hump on their back, which is a storage for fat reserves. Camels are well adapted to desert life, with long legs that help them navigate through sandy terrain, and wide, tough feet that prevent them from sinking. They have a unique ability to conserve water and can go for long periods without drinking. Camels are often used by humans for transportation and as pack animals.\n",
-      "answer received in 7.581058979034424 seconds.\n"
+      "Who is Jason McAffee?\n",
+      "I couldn't find any specific information about a person named Jason McAffee. It's possible that he is a private individual or not widely known in public sources.\n",
+      "answer received in 1.4250340461730957 seconds.\n"
      ]
     }
    ],
    "source": [
     "stream_prompt(\"\"\"\n",
-    "Who is user Jason McAffee?\n",
+    "Who is Jason McAffee?\n",
     "\"\"\")"
    ],
    "metadata": {
@@ -129,8 +120,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-15T02:28:38.619864Z",
-     "start_time": "2023-12-15T02:28:31.031965Z"
+     "end_time": "2023-12-26T22:53:42.772698Z",
+     "start_time": "2023-12-26T22:53:41.336784Z"
     }
    }
   },
