command handling for summarize-url working.

--- a/projects/slack/slack rtm.ipynb
+++ b/projects/slack/slack rtm.ipynb
@@ -1102,6 +1102,58 @@
     "collapsed": false
    },
    "id": "3d63d95cd9b2f168"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'groups'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[5], line 7\u001B[0m\n\u001B[1;32m      4\u001B[0m match \u001B[38;5;241m=\u001B[39m re\u001B[38;5;241m.\u001B[39mmatch(pattern, message)\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28mprint\u001B[39m(match)\n\u001B[0;32m----> 7\u001B[0m slash_command, url, new_message_with_command_stripped \u001B[38;5;241m=\u001B[39m \u001B[43mmatch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgroups\u001B[49m()\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28mprint\u001B[39m(url)\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'groups'"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "message = \"/summarize-url https://api.slack.com/legacy/message-menus\"\n",
+    "pattern = r'^(\\/summarize-url)\\s+(https?:\\/\\/[^\\s]+)(.*)$'\n",
+    "match = re.match(pattern, message)\n",
+    "print(match)\n",
+    "\n",
+    "slash_command, url, new_message_with_command_stripped = match.groups()\n",
+    "print(url)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-27T20:03:42.310284Z",
+     "start_time": "2023-12-27T20:03:42.296507Z"
+    }
+   },
+   "id": "e65c11cd97b77174"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cddfeb11080e5bfc"
   }
  ],
  "metadata": {
