docs command stubbed out.

--- a/projects/slack/slack rtm.ipynb
+++ b/projects/slack/slack rtm.ipynb
@@ -447,9 +447,11 @@
    ],
    "source": [
     "from llama_cpp import Llama\n",
+    "\n",
     "max_tokens = 2048\n",
     "# llama_llm = Llama(model_path=\"/Volumes/4Tera_SSD_2022/llm_models/llama-2-7b-chat.Q5_K_M.gguf\", chat_format=\"llama-2\")\n",
-    "llm = Llama(model_path=\"/Volumes/Macintosh HD/Users/jmcaffee/llm-models/llama-2-7b-chat.Q5_K_M.gguf\", chat_format=\"llama-2\", n_ctx=max_tokens)\n",
+    "llm = Llama(model_path=\"/Volumes/Macintosh HD/Users/jmcaffee/llm-models/llama-2-7b-chat.Q5_K_M.gguf\",\n",
+    "            chat_format=\"llama-2\", n_ctx=max_tokens)\n",
     "llm.verbose = False"
    ],
    "metadata": {
@@ -467,11 +469,13 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "\n",
+    "\n",
     "def prompt2(question):\n",
     "    start_time_seconds = time.time()\n",
     "    output = llm.create_chat_completion(\n",
     "        max_tokens=max_tokens,\n",
-    "        messages = [\n",
+    "        messages=[\n",
     "            {\n",
     "                \"role\": \"system\",\n",
     "                \"content\": \"You are an assistant who perfectly responds to questions with as many details as possible, without making up facts.\"\n",
@@ -528,6 +532,7 @@
    "source": [
     "import asyncio\n",
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()\n",
     "from slack_sdk.rtm_v2 import RTMClient\n",
     "\n",
@@ -538,6 +543,7 @@
     "# Initialize the RTMClient\n",
     "rtm = RTMClient(token=slack_token)\n",
     "\n",
+    "\n",
     "# Define the event handler\n",
     "@rtm.on(\"message\")\n",
     "def handle(client: RTMClient, event: dict):\n",
@@ -547,20 +553,21 @@
     "    thread_ts = event['ts']\n",
     "    user = event['user']  # User ID\n",
     "\n",
-    "    \n",
     "    # Post a message to the channel\n",
     "    client.web_client.chat_postMessage(\n",
     "        channel=channel_id,\n",
     "        text=f\"Having llm answer the question: {message_received}\",\n",
     "        thread_ts=thread_ts\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    answer = prompt2(message_received)\n",
     "    client.web_client.chat_postMessage(\n",
     "        channel=channel_id,\n",
     "        text=f\"Answer: {answer}\",\n",
     "        thread_ts=thread_ts\n",
     "    )\n",
+    "\n",
+    "\n",
     "# Running the event loop\n",
     "asyncio.ensure_future(rtm.start())\n",
     "asyncio.get_event_loop().run_forever()\n"
@@ -707,7 +714,9 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "import io\n",
+    "\n",
+    "\n",
+    "\n",
     "class LineIterator:\n",
     "    def __init__(self, stream):\n",
     "        self.byte_iterator = iter(stream)\n",
@@ -754,39 +763,42 @@
     "# run !gimme-aws-creds, then aws_switch sofi-bedrock-bdp-production\n",
     "import boto3\n",
     "import io\n",
-    "import json \n",
+    "import json\n",
     "\n",
     "# session = boto3.Session(profile_name='AssumeBedrockPOC')\n",
     "session = boto3.Session(profile_name='sofi-bedrock-bdp-production')\n",
     "smr = session.client('sagemaker-runtime', 'us-west-2')\n",
+    "\n",
+    "\n",
     "#AssumeBedrockPOC\n",
     "\n",
     "def sagemaker_prompt(question, on_text_received):\n",
     "    print(f\"sagemaker question: {question}\")\n",
     "    system_message = \"You are a helpful assistant that does not use superfluous pleasantries. Avoiding ending your reply with questions.  If a question does not make sense, call out why it doesn't make sense, and don't attempt to answer. If you don't know the answer to a question, do not make up an answer.\"\n",
-    "    prompt=f'''[INST] <<SYS>>\n",
+    "    prompt = f'''[INST] <<SYS>>\n",
     "        {system_message}\n",
     "        <</SYS>>\n",
     "        {question} [/INST]'''\n",
-    "    \n",
+    "\n",
     "    # hyperparameters for llm\n",
     "    payload = {\n",
-    "      \"inputs\": prompt,\n",
-    "      \"parameters\": {\n",
-    "        \"do_sample\": True,\n",
-    "        \"top_p\": 0.7,\n",
-    "        \"temperature\": 0.7,\n",
-    "        \"top_k\": 10,\n",
-    "        \"max_new_tokens\": 500,\n",
-    "        \"repetition_penalty\": 1.03,\n",
-    "        \"stop\": [\"<|endoftext|>\"]\n",
-    "      },\n",
-    "      \"stream\": True  \n",
+    "        \"inputs\": prompt,\n",
+    "        \"parameters\": {\n",
+    "            \"do_sample\": True,\n",
+    "            \"top_p\": 0.7,\n",
+    "            \"temperature\": 0.7,\n",
+    "            \"top_k\": 10,\n",
+    "            \"max_new_tokens\": 500,\n",
+    "            \"repetition_penalty\": 1.03,\n",
+    "            \"stop\": [\"<|endoftext|>\"]\n",
+    "        },\n",
+    "        \"stream\": True\n",
     "    }\n",
     "    stop_token = \"<|endoftext|>\"\n",
     "    # llm.deserializer=StreamDeserializer()\n",
     "    endpoint_name = \"Llama-2-13B-Chat-fp16-v7-2023-12-21-17-51-07-902\"\n",
-    "    resp = smr.invoke_endpoint_with_response_stream(EndpointName=endpoint_name, Body=json.dumps(payload), ContentType='application/json')\n",
+    "    resp = smr.invoke_endpoint_with_response_stream(EndpointName=endpoint_name, Body=json.dumps(payload),\n",
+    "                                                    ContentType='application/json')\n",
     "    event_stream = resp['Body']\n",
     "    start_json = b'{'\n",
     "    for line in LineIterator(event_stream):\n",
@@ -796,10 +808,12 @@
     "                on_text_received(data['token']['text'])\n",
     "                # print(data['token']['text'],end='')\n",
     "\n",
+    "\n",
     "def handle_text_received(text):\n",
     "    print(text, end='')\n",
     "\n",
-    "sagemaker_prompt(\"What is a camel?\", handle_text_received)                "
+    "\n",
+    "sagemaker_prompt(\"What is a camel?\", handle_text_received)"
    ],
    "metadata": {
     "collapsed": false,
@@ -944,6 +958,7 @@
     "import asyncio\n",
     "import nest_asyncio\n",
     "import threading\n",
+    "\n",
     "nest_asyncio.apply()\n",
     "from slack_sdk.rtm_v2 import RTMClient\n",
     "\n",
@@ -954,6 +969,7 @@
     "# Initialize the RTMClient\n",
     "rtm = RTMClient(token=slack_token)\n",
     "\n",
+    "\n",
     "# Define the event handler\n",
     "@rtm.on(\"message\")\n",
     "def handle(client: RTMClient, event: dict):\n",
@@ -963,18 +979,18 @@
     "    # thread_ts = event['ts']\n",
     "    # user = event['user']  # User ID\n",
     "    ai_bot_user = \"<@U06B7U1478S>\"\n",
-    "    \n",
+    "\n",
     "    # Post a message to the channel\n",
     "    # Check if the message is addressed to @ai\n",
     "    if message_received.startswith(ai_bot_user):\n",
     "        print('ai_bot_user')\n",
-    "        \n",
+    "\n",
     "        def handle_ai_bot_message(client: RTMClient, event: dict):\n",
     "            # print(f'handle ai bot message: {event}')\n",
     "            message_received = event.get('text', '')\n",
     "            channel_id = event['channel']\n",
     "            thread_ts = event['ts']\n",
-    "            \n",
+    "\n",
     "            prompt = message_received.replace(ai_bot_user, '')\n",
     "            cumulative_text = f\"{prompt}\\n\"\n",
     "            print(cumulative_text)\n",
@@ -984,11 +1000,11 @@
     "                text=cumulative_text,\n",
     "                thread_ts=thread_ts\n",
     "            )\n",
-    "    \n",
+    "\n",
     "            # Retrieve timestamp of the initial response\n",
     "            initial_response_ts = initial_response['ts']\n",
     "            last_update_length = len(cumulative_text)\n",
-    "            \n",
+    "\n",
     "            def handle_text_received(text):\n",
     "                nonlocal cumulative_text, last_update_length\n",
     "                cumulative_text += text\n",
@@ -1002,7 +1018,7 @@
     "                        thread_ts=thread_ts\n",
     "                    )\n",
     "                    last_update_length = len(cumulative_text)\n",
-    "    \n",
+    "\n",
     "            sagemaker_prompt(message_received, handle_text_received)\n",
     "\n",
     "        thread = threading.Thread(\n",
@@ -1011,7 +1027,8 @@
     "        )\n",
     "        thread.start()\n",
     "        # handle_ai_bot_message(client, event)\n",
-    "    \n",
+    "\n",
+    "\n",
     "# Running the event loop\n",
     "# asyncio.ensure_future(rtm.start())\n",
     "# asyncio.get_event_loop().run_forever()\n",
@@ -1105,42 +1122,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'groups'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[5], line 7\u001B[0m\n\u001B[1;32m      4\u001B[0m match \u001B[38;5;241m=\u001B[39m re\u001B[38;5;241m.\u001B[39mmatch(pattern, message)\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28mprint\u001B[39m(match)\n\u001B[0;32m----> 7\u001B[0m slash_command, url, new_message_with_command_stripped \u001B[38;5;241m=\u001B[39m \u001B[43mmatch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgroups\u001B[49m()\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28mprint\u001B[39m(url)\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'groups'"
+      "<re.Match object; span=(0, 14), match='/docs whats up'>\n",
+      " whats up\n",
+      "/docs\n"
      ]
     }
    ],
    "source": [
     "import re\n",
-    "message = \"/summarize-url https://api.slack.com/legacy/message-menus\"\n",
-    "pattern = r'^(\\/summarize-url)\\s+(https?:\\/\\/[^\\s]+)(.*)$'\n",
+    "\n",
+    "message = \"/docs whats up\"\n",
+    "pattern = r'^(\\/docs)(.*)$'\n",
     "match = re.match(pattern, message)\n",
     "print(match)\n",
     "\n",
-    "slash_command, url, new_message_with_command_stripped = match.groups()\n",
-    "print(url)"
+    "slash_command, new_message_with_command_stripped = match.groups()\n",
+    "print(new_message_with_command_stripped)\n",
+    "print(slash_command)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-27T20:03:42.310284Z",
-     "start_time": "2023-12-27T20:03:42.296507Z"
+     "end_time": "2023-12-28T01:17:53.633977Z",
+     "start_time": "2023-12-28T01:17:53.502054Z"
     }
    },
    "id": "e65c11cd97b77174"
@@ -1149,7 +1159,10 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "pattern = r'^(\\/docs)(.*)$'\n",
+    "match = re.match(pattern, message)"
+   ],
    "metadata": {
     "collapsed": false
    },
