--- a/projects/slack/slack rtm.ipynb
+++ b/projects/slack/slack rtm.ipynb
@@ -1122,23 +1122,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<re.Match object; span=(0, 14), match='/docs whats up'>\n",
-      " whats up\n",
-      "/docs\n"
+      "None\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'groups'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[14], line 8\u001B[0m\n\u001B[1;32m      5\u001B[0m match \u001B[38;5;241m=\u001B[39m re\u001B[38;5;241m.\u001B[39mmatch(pattern, message)\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28mprint\u001B[39m(match)\n\u001B[0;32m----> 8\u001B[0m slash_command, new_message_with_command_stripped \u001B[38;5;241m=\u001B[39m \u001B[43mmatch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgroups\u001B[49m()\n\u001B[1;32m      9\u001B[0m \u001B[38;5;28mprint\u001B[39m(new_message_with_command_stripped)\n\u001B[1;32m     10\u001B[0m \u001B[38;5;28mprint\u001B[39m(slash_command)\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'groups'"
      ]
     }
    ],
    "source": [
     "import re\n",
     "\n",
-    "message = \"/docs whats up\"\n",
-    "pattern = r'^(\\/docs)(.*)$'\n",
+    "message = \"/tacos-con_friASK12334&** whats up\"\n",
+    "pattern = r'^(\\/[\\w-]+)\\s+(.*)$'\n",
     "match = re.match(pattern, message)\n",
     "print(match)\n",
     "\n",
@@ -1149,8 +1158,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-28T01:17:53.633977Z",
-     "start_time": "2023-12-28T01:17:53.502054Z"
+     "end_time": "2023-12-28T03:36:52.786754Z",
+     "start_time": "2023-12-28T03:36:52.674578Z"
     }
    },
    "id": "e65c11cd97b77174"
